--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>web</title>
   </head>
   <body>
-    <div class="waves"></div>
-    <div class="waves2"></div>
+    <div class="mask"></div>
+    <div class="mask"></div>
     <!-- 内容写下面 -->
     <div id="ful">
       <header>
@@ -22,15 +22,15 @@
           <p>魂</p>
         </div>
       </header>
-      <div class="circle"></div>
+      <div class="moon"></div>
       <div class="text">
         <p>海上生明月，</p>
         <p>天涯共此时。</p>
       </div>
       <welcome>
         <div class="text">
-          <p2>海上生明月，</p2>
-          <p2>天涯共此时。</p2>
+          <p>海上生明月，</p>
+          <p>天涯共此时。</p>
         </div>
       </welcome>
       <section id="first">
