--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>web</title>
+    <title>无聊的恶魂 | 个人主页</title>
   </head>
   <body>
     <div class="mask"></div>
@@ -38,11 +38,16 @@
         <p>我是一名即将毕业的小学生</p>
         <p>比较喜欢编程,熟悉html,css 正在向js努力</p>
         <p>
-          在这里呢,我还要感谢一下
+          在这里呢, 我还要感谢一下
           <a href="https://space.bilibili.com/34786453"> 康文昌 </a>
         </p>
+        <p>是他带我入门了前端, 才有了现在这个网站</p>
         <p>他的视频非常简单易懂,全都是干货,大家可以看一看支持一下他</p>
       </section>
+      <p id="fHref">
+        <a href="https://www.midorg.com/">加入元岛</a> |
+        <a href="https://space.bilibili.com/1537540072">个人主页</a>
+      </p>
       <p id="copyright">版权归<b>无聊的恶魂</b>所有</p>
     </div>
   </body>
