--- a/growth/index.html
+++ b/growth/index.html
@@ -84,7 +84,7 @@
         <h3>三年级语文综合性主题学习活动 (应该是这么叫的吧ㄟ( ▔, ▔ )ㄏ)</h3>
         <div>
           <div class="text">
-            <p>一起包粽子</p>
+            <p>和组员一起包粽子</p>
             <br />
             <div class="img"><img src="./imgs/chuantonghuodong1.jpg" alt="" /></div>
             <div class="img"><img src="./imgs/chuantonghuodong4.jpg" alt="" /></div>
@@ -151,13 +151,13 @@
         </div>
         <h2 id="name">留个名吧</h2>
         <ul id="names"></ul>
-        <button id="add" onclick="addName(names)">+</button>
-        <button id="empty" onclick="emptyName(names)">清空</button>
+        <button class="add" onclick="addName(names)">+</button>
+        <button onclick="emptyName(names)">清空</button>
         <br />
         <h2>老师专用区</h2>
         <ul id="tnames"></ul>
-        <button id="add" onclick="addName(tnames)">+</button>
-        <button id="empty" onclick="emptyName(tnames)">清空</button>
+        <button class="add" onclick="addName(tnames)">+</button>
+        <button onclick="emptyName(tnames)">清空</button>
         <footer><p>版权归<b>董海杰</b>所有</p></footer>
         <h2 id="finish">毕业照</h2>
         <div id="finishimg">毕业照</div>
